@@ -1,6 +1,9 @@
 Release 3.0.1 (2014-06-??)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+New:
+- Added pySilvia [Patrick Uiterwijk]
+
 Fixes:
 - Uses complete_url_for so no http -> https issues arise [Patrick Uiterwijk]
 - Reworded "Remember for 0 days" to "Remember for never" [Kevin Fenzi]
